force-app/main/default/objects/Account/fields/Address_Marker__c.field-meta.xml
<CustomField>
    <fullName>Address_Marker__c</fullName>
    <label>Address Marker</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>