force-app/main/default/objects/Account/fields/LWC_Org_External_ID__c.field-meta.xml
<CustomField>
    <fullName>LWC_Org_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>LWC Org External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>