force-app/main/default/objects/Account/fields/My_Formula__c.field-meta.xml
<CustomField>
    <fullName>My_Formula__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Formula</label>
    <type>Checkbox</type>
</CustomField>