force-app/main/default/objects/Account/fields/My_Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>My_Long_Text_Area__c</fullName>
    <label>My Long Text Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>